--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap'); */
 
@@ -15,3 +17,5 @@ body {
     "Segoe UI Symbol", "Noto Color Emoji";
   background-color: white;
 }
+
+
